Update old test cases to fit new usage and add new test cases